discussion/kv_engine/162645/162645_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48506: Introduce ExtractItemsResult

New return type of CM::extractItemsToExpel.
For now it just introduces some of the boilerplate necessary in future
patches where we'll remove some O(N) code that is currently responsible
for updating the Checkpoint::queuedItemsMemUsage counter at expel.

Note
I'm using the existing ExtractItemsToExpel bench for ensuring that I
don't degrade the operation performance by re-introducing any
accidental expelled-container copy. Benchs report the most relevant
1k/10k items configuration in all the Disk/Memory Open/Closed checkpoint
variant:

$ ./ep_engine_benchmarks --benchmark_filter="ExtractItemsToExpel/<Disk/Memory>/<Open/Closed>/"
Run on (24 X 2277.19 MHz CPU s)
CPU Caches:
  L1 Data 32 KiB (x12)
  L1 Instruction 32 KiB (x12)
  L2 Unified 256 KiB (x12)
  L3 Unified 15360 KiB (x2)

-----------------------------------------------------------------------------------------------------
Benchmark                                                           Time             CPU   Iterations
-----------------------------------------------------------------------------------------------------

[BEFORE]

CheckpointBench/ExtractItemsToExpel/0/0/1000/iterations:1       31687 ns        30031 ns            1 type:Disk state:Open items:1000
CheckpointBench/ExtractItemsToExpel/0/0/10000/iterations:1     277191 ns       270375 ns            1 type:Disk state:Open items:10000
CheckpointBench/ExtractItemsToExpel/0/1/1000/iterations:1       32738 ns        30456 ns            1 type:Disk state:Closed items:1000
CheckpointBench/ExtractItemsToExpel/0/1/10000/iterations:1     285216 ns       281559 ns            1 type:Disk state:Closed items:10000
CheckpointBench/ExtractItemsToExpel/1/0/1000/iterations:1      164948 ns       156615 ns            1 type:Memory state:Open items:1000
CheckpointBench/ExtractItemsToExpel/1/0/10000/iterations:1    1390934 ns      1386481 ns            1 type:Memory state:Open items:10000
CheckpointBench/ExtractItemsToExpel/1/1/1000/iterations:1       33595 ns        31315 ns            1 type:Memory state:Closed items:1000
CheckpointBench/ExtractItemsToExpel/1/1/10000/iterations:1     271432 ns       267249 ns            1 type:Memory state:Closed items:10000

[AFTER]

CheckpointBench/ExtractItemsToExpel/0/0/1000/iterations:1       32105 ns        30293 ns            1 type:Disk state:Open items:1000
CheckpointBench/ExtractItemsToExpel/0/0/10000/iterations:1     270464 ns       266873 ns            1 type:Disk state:Open items:10000
CheckpointBench/ExtractItemsToExpel/0/1/1000/iterations:1       31777 ns        29682 ns            1 type:Disk state:Closed items:1000
CheckpointBench/ExtractItemsToExpel/0/1/10000/iterations:1     270002 ns       265996 ns            1 type:Disk state:Closed items:10000
CheckpointBench/ExtractItemsToExpel/1/0/1000/iterations:1      118807 ns       117102 ns            1 type:Memory state:Open items:1000
CheckpointBench/ExtractItemsToExpel/1/0/10000/iterations:1    1314588 ns      1311509 ns            1 type:Memory state:Open items:10000
CheckpointBench/ExtractItemsToExpel/1/1/1000/iterations:1       32596 ns        30205 ns            1 type:Memory state:Closed items:1000
CheckpointBench/ExtractItemsToExpel/1/1/10000/iterations:1     279151 ns       275243 ns            1 type:Memory state:Closed items:10000

Change-Id: I4429a367fa80df18fbe9d028f3b5a78443c122ab

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-10-02 06:40:02.000000000
Message: 
Uploaded patch set 12.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-02 07:04:57.000000000
Message: 
Patch Set 12: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13041/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/atomic.h:200:40: error: member access into incomplete type "Item" [clang-diagnostic-error]
        if (value != nullptr && --value->_rc_refcount == 0) {
                                       ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_construct.h:140:19: note: in instantiation of member function "SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >::~SingleThreadedRCPtr" requested here
      __pointer->~_Tp();
                  ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/list.tcc:77:24: note: in instantiation of function template specialization "std::allocator_traits<MemoryTrackingAllocator<std::_List_node<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> > > > >::destroy<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> > >" requested here
          _Node_alloc_traits::destroy(_M_get_Node_allocator(), __val);
                              ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_list.h:499:9: note: in instantiation of member function "std::__cxx11::_List_base<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >, MemoryTrackingAllocator<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> > > >::_M_clear" requested here
      { _M_clear(); }
        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_list.h:673:7: note: in instantiation of member function "std::__cxx11::_List_base<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >, MemoryTrackingAllocator<SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> > > >::~_List_base" requested here
      list() = default;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_types.h:21:7: note: forward declaration of "Item"
class Item;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13041/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/atomic.h:200:40:
error: member access into incomplete type "Item" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13041/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34572/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40638/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11829/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15479/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14639/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2659/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14908/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2695/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22924/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13787/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
